feat: k8s healthz endpoints
